<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp" >

    <TextView
        style="@style/setting_paragraph_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/function_pwm_frequencyset" />

    <LinearLayout
        style="@style/setting_sub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center" >

        <EditText
            android:hint="@string/Number"
            android:id="@+id/editText1"
            android:layout_width="100dp"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="100dp"
            android:prompt="@string/unit"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Hz" />

    </LinearLayout>
    
    <TextView
        style="@style/setting_paragraph_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/function_pwm_duty_ratio_set" />
    
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/pulse_layout" />

</LinearLayout>
