<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_main_background_edit"
    android:padding="10dp" >

    <ImageButton
        android:id="@+id/main_home_option_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_option" />

    <TextView
        android:id="@+id/main_textview_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Subject"
        android:textColor="#FFF"
        android:textSize="19sp"
        android:textStyle="bold" />

    <LinearLayout
        android:gravity="top|center"        
        android:id="@+id/main_home_bluefunc_parent_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corner_border_gray"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:padding="10dp" >

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_margin="15dp"
                android:id="@+id/main_home_bluetooth_connect_layout"
           		android:background="@drawable/rounded_corner_noborder_gray"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/main_home_bluetooth_connect_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_bluetooth_connect" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_home_funtion_layout"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center"
                android:background="@drawable/rounded_corner_noborder_white"
                android:orientation="vertical" >

                <LinearLayout
                    style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_adc_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_adc" />

                    <TextView
                        android:id="@+id/main_home_adc_text"
                        android:text="@string/adc_test"
                        style="@style/main_home_function_text" />

                </LinearLayout>

                <LinearLayout
                    style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_pwm_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_pwm" />

                    <TextView
                        android:id="@+id/main_home_pwm_text"
                        android:text="@string/pwm_test"
                        style="@style/main_home_function_text" />
                    
                </LinearLayout>

                <LinearLayout
                    style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_usart_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_usart" />
                    <TextView
                        android:id="@+id/main_home_usart_text"
                        android:text="@string/usart_test"
                        style="@style/main_home_function_text" />

                </LinearLayout>

                <LinearLayout
                    style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_i2c_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_i2c" />

                    <TextView
                        android:id="@+id/main_home_i2c_text"
                        android:text="@string/i2c_test"
                        style="@style/main_home_function_text" />
                    
                </LinearLayout>

                <LinearLayout
                    style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_clock_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_clock" />

                    <TextView
                        android:id="@+id/main_home_clock_text"
                        android:text="@string/highlow_test"
                        style="@style/main_home_function_text" />
                    
                </LinearLayout>

                <LinearLayout
                    style="@style/main_home_function_btn_text_layout" >

                    <ImageButton
                        android:id="@+id/main_home_motor_btn"
                        style="@style/main_home_function_btn"
                        android:background="@drawable/ic_motor" />

                    <TextView
                        android:id="@+id/main_home_motor_text"
                        android:text="@string/motor_test"
                        style="@style/main_home_function_text" />
                    
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/main_home_state_textview"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

</RelativeLayout>